# pdf-agpl-tools

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/api/: __init__.py
src/api/routes/: __init__.py  compression.py  health.py  pages.py  redaction.py
src/api/schemas/: __init__.py  compression.py  pages.py  redaction.py
src/services/: __init__.py  compression.py  page_operations.py  redaction.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py  test_compression.py  test_health.py  test_pages.py  test_redaction.py
